--- a/views/ex1.html
+++ b/views/ex1.html
@@ -11,44 +11,78 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
   </head>
   <body>
-  <div class="container">
-    
-    <div id="sidebar">
-    <form >
-      <div class="form-group">
-        <label for="name">城市名称: </label>
-        <input id="name" type="text" placeholder="请输入城市名称">
-      </div>
-      <div class="form-group">
-        <label for="point">城市坐标: </label>
+    <div class="main">
+      <div id="sidebar">
+        <div>
+          <div class="form-group">
+            <label for="name">城市名称: </label>
+            <input id="name" type="text" placeholder="请输入城市名称">
+          </div>
+          <div class="form-group">
+            <label for="point">城市坐标: </label>
+            <input id="point" type="text">
+          </div>
+          <button id="upload" class="btn btn-primary">上传</button>
+        </div>
+        <!--
+        <form class="form-inline"></form>
+        城市名称：
+        <input id="name" type="text">
+        城市坐标：
         <input id="point" type="text">
+        <button id="upload" class="btn btn-primary">上传</button>
+        -->
+        <div>
+          <div class="form-group">
+            <label for="delete">城市名称: </label>
+            <input id="delete" type="text" placeholder="请输入删除城市">
+          </div>
+          <button onclick="m_delete()" class="btn btn-primary">删除</button>
+        </div>
+        <!--
+        <label for="">输入你要删除的城市姓名
+        <input id="delete" type="text">
+        </label>
+        <button onclick="m_delete()" class="btn btn-primary">删除</button>
+        -->
+        <div>
+          <div class="form-group">
+            <label for="query">城市名称: </label>
+            <input id="query" type="text" placeholder="请输入查询城市">
+          </div>
+          <button onclick="m_query()" class="btn btn-primary">查询</button>
+        </div>
       </div>
-      <button id="upload" class="btn btn-primary">上传</button>
-    </form>
-
-    <form >
-      <div class="form-group">
-        <label for="delete">城市名称: </label>
-        <input id="delete" type="text" placeholder="请输入删除城市">
+      <div id="map" class="map"></div>
+      <div id="delbar" class="delbar">
+        <table id="table" class="table table-hover">
+          <tr>
+            <th>ID</th>
+            <th>名称</th>
+            <th>操作</th>
+          </tr>
+          <tbody></tbody>
+        </table>
       </div>
-      <button onclick="m_delete()" class="btn btn-primary">删除</button>
-    </form>
-<!--     <label for="">输入你要删除的城市姓名
-      <input id="delete" type="text">
-    </label>
-    <button onclick="m_delete()" class="btn btn-primary">删除</button> -->
-    <form >
-    <div class="form-group">
-    <label for="query">城市名称: </label>
-      <input id="query" type="text" placeholder="请输入查询城市">
     </div>
-    <button onclick="m_query()" class="btn btn-primary">查询</button>
-    </form>
+    <!--
+    <div class="stage">
+    <div class="container">
+    <img src="img/1.jpg" alt="">
+    <img src="img/2.jpg" alt="">
+    <img src="img/3.jpg" alt="">
+    <img src="img/4.jpg" alt="">
+    <img src="img/5.jpg" alt="">
+    <img src="img/6.jpg" alt="">
     </div>
-    <div id="map" class="map"></div>
+    </div>
+    -->
+    <div id="popup" class="ol-popup"><a id="popup-closer" href="#" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/delbar.js"></script>
   </body>
 </html>
