--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,24 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   min-width: 1200px;
 }
+.nav
+{
+  height: 100px;
+  margin: 0 auto;
 
+}
+.nav>ul>li
+{
+  margin-right: 30px;
+  margin-left: 30px;
+  font-size: 1.5em;
+}
+#display_name
+{
+
+  float: right;
+
+}
 a {
   color: #00B7FF;
 }
