--- a/views/ex1.html
+++ b/views/ex1.html
@@ -19,7 +19,7 @@
   
    <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User action <span class="caret"></span></a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" style="max-height: 600px;overflow: scroll;">
           </ul>
   </li>
   <li role="presentation"><a href="#" class="logout">Log out</a></li>
