添加了图片的上传

--- a/views/ex1.html
+++ b/views/ex1.html
@@ -39,6 +39,10 @@
             <label for="point">城市坐标: </label>
             <input id="point" type="text">
           </div>
+          <div class="form-group">
+            <label for="img">城市名称: </label>
+            <input id="img" type="file" accept="image/png,image/gif,image/jpeg">
+          </div>
           <button id="upload" class="btn btn-primary">上传</button>
         </div>
 
