--- a/views/login.html
+++ b/views/login.html
@@ -5,10 +5,11 @@
 	<title>用户登录</title>
 	<link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
 	<style>
+
 		.container
 		{
 			text-align: center;
-			width: 500px;
+			width: 450px;
 		}
 		.btn-danger
 		{
@@ -20,6 +21,14 @@
 			float: right;
 			margin-right: 50px;
 		}
+		.container
+		{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -120%);
+		}
+
 	</style>
 </head>
 <body>
@@ -35,7 +44,7 @@
      <div class="form-group">
     <label for="password" class="col-sm-2 control-label">Password</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="password" placeholder="Password" name="password">
+      <input type="password" class="form-control" id="password" placeholder="Password" name="password">
     </div>
      </div>
      <button class="btn btn-info" onclick='login(event)'>Log in</button>
@@ -55,14 +64,14 @@
      <div class="form-group">
     <label for="password" class="col-sm-2 control-label">Password</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="password2" name="password" placeholder="Password">
+      <input type="password" class="form-control" id="password2" name="password" placeholder="Password">
     </div>
 
      </div>
      <div class="form-group">
     <label  class="col-sm-2 control-label">Retype</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="repassword" placeholder="Retype">
+      <input type="password" class="form-control" id="repassword" placeholder="Retype">
     </div>
     
      </div>
@@ -90,6 +99,7 @@
 		var user={};
 		user.username=document.getElementById('username').value;
 		user.password=document.getElementById('password').value;
+		console.log(user.password);
 		if(user.username==''||user.password=='')
 		{
 			alert('密码和用户不能为空')
@@ -97,6 +107,7 @@
 		else{
 		var xmlhttp=new XMLHttpRequest();
 		xmlhttp.onreadystatechange=function(){
+			if (xmlhttp.readyState == 4 && xmlhttp.status == 200){
 			var text=xmlhttp.responseText;
 			console.log(text);
 			if(text=='y')
@@ -104,6 +115,11 @@
 			location.href='http://'+location.host+'/';
 			console.log(location.host);
 			}
+			else 
+			{
+				alert(text);
+			}
+		}
 
 
 		}
@@ -140,10 +156,12 @@
 		user.password=document.getElementById('password2').value;
 		var xmlhttp=new XMLHttpRequest();
 		xmlhttp.onreadystatechange=function(){
+			if (xmlhttp.readyState == 4 && xmlhttp.status == 200){
 			// location.href='http://'+location.host+'/';
 			// console.log(location.host);
 		containers[0].style.display='block';
 		containers[1].style.display='none';
+	}
 
 
 		}
