修改了全局样式

--- a/views/ex1.html
+++ b/views/ex1.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
   </head>
-  <body>
-  <div class="nav">
+  <body style="background-color: #4A374A">
+  <div class="nav" id="navigate">
   <ul class="nav nav-pills">
   <li role="presentation" class="active"><a href="#">Home</a></li>
   <li role="presentation"><a href="https://github.com/inertiabeer/web-gis">Code</a></li>
