--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,25 @@
 body {
-  padding: 50px;
+/*  padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   min-width: 1200px;
+  width: 100%;
+  height: 100%;
+  background-image: url(../gift.jpeg);
+
 }
-.nav
+#navigate
 {
-  height: 100px;
-  margin: 0 auto;
+  height: 160px;
+  width: calc(100% - 60px);
+  margin: 30px;
+  padding: 50px;
+  background-color: #2c0e3b;
+
+
+
+  box-shadow: 0px 0px 10px #000;
+
+
 
 }
 .img>img
@@ -27,7 +40,7 @@ body {
 
 }
 a {
-  color: #00B7FF;
+  color: #4A374A;
 }
 .container
 {
@@ -39,9 +52,16 @@ a {
 	width: calc(20% - 3em);
 	float: left;
 	margin-right: 3em;
-	background-color: #ccc;
+	background-color: hsla(0,0%,100%,.7);
+  padding: 10px;
 	min-width: 160px;
   height: 600px;
+  font-size: 1.3em;
+
+
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  box-shadow: 5px 5px 10px #000;
 }
 #map
 {
@@ -49,6 +69,8 @@ a {
 	float: left;
 	height: 600px;
 	min-width: 430px;
+   background-color: hsla(0,0%,100%,.3);
+   box-shadow: 5px 5px 10px #000;
 }
 #delbar
 {
@@ -56,8 +78,12 @@ a {
   float: left;
   height: 600px;
   margin-left:3em; 
-  background-color: #ccc;
+  background-color: hsla(0,0%,100%,.7);
+  padding: 10px;
   overflow: scroll;
+
+
+  box-shadow: 5px 5px 10px #000;
 }
       .ol-popup {
         position: absolute;
