--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   min-width: 1200px;
   width: 100%;
   height: 100%;
-  background-image: url(../gift.jpeg);
+  background-image: url(../gift.jpg);
 
 }
 #navigate
