修改背景，添加毛玻璃效果

--- a/views/ex1.html
+++ b/views/ex1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
   </head>
-  <body style="background-color: #4A374A">
+  <body >
   <div class="nav" id="navigate">
   <ul class="nav nav-pills">
   <li role="presentation" class="active"><a href="#">Home</a></li>
