--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,13 @@
 body {
-/*  padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   min-width: 1200px;
   width: 100%;
   height: 100%;
-  background-image: url(../gift.jpg);
-
+  background: url(../gift.jpg) 0/cover fixed;
+}
+#navigate::before
+{
+  background: url(../gift.jpg) 0/cover fixed;
 }
 #navigate
 {
@@ -13,13 +15,23 @@ body {
   width: calc(100% - 60px);
   margin: 30px;
   padding: 50px;
-  background-color: #2c0e3b;
-
-
-
+  position: relative;
   box-shadow: 0px 0px 10px #000;
+  background-color: hsla(0,0%,100%,.3);
+ 
 
 
+
+}
+#navigate::before
+{
+content:'';
+position: absolute;
+top: 0px;
+left: 0px;
+width: 100%;
+height: 100%;
+filter: blur(80px);
 
 }
 .img>img
@@ -47,21 +59,42 @@ a {
 	width: 100%;
 	height: 100%;
 }
+#sidebar::before
+{
+background: url(../gift.jpg) 0/cover fixed;
+ 
+
+
+}
 #sidebar
 {
+  position: relative;
 	width: calc(20% - 3em);
 	float: left;
 	margin-right: 3em;
-	background-color: hsla(0,0%,100%,.7);
+	background-color: hsla(0,0%,100%,.3);
   padding: 10px;
 	min-width: 160px;
   height: 600px;
-  font-size: 1.3em;
-
-
+  font-size: 1rem;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 5px 5px 10px #000;
+  color: white;
+  
+  overflow: hidden;
+
+}
+#sidebar::before
+{
+   content:'';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+filter: blur(20px);
+z-index: -1;
 }
 #map
 {
@@ -78,12 +111,28 @@ a {
   float: left;
   height: 600px;
   margin-left:3em; 
-  background-color: hsla(0,0%,100%,.7);
+  background-color: hsla(0,0%,100%,.3);
   padding: 10px;
+  position: relative;
   overflow: scroll;
+  color: white;
 
 
   box-shadow: 5px 5px 10px #000;
+}
+#delbar::before
+{
+    background: url(../gift.jpg) 0/cover fixed;
+    content:'';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+filter: blur(20px);
+z-index: -1;
+
+
 }
       .ol-popup {
         position: absolute;
