--- a/views/ex1.html
+++ b/views/ex1.html
@@ -24,6 +24,8 @@
   </li>
   <li role="presentation"><a href="#" class="logout">Log out</a></li>
   <li role="presentation" id="display_name"><a href="#"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>username</a></li>
+  <li><a href="javascript:;" onclick="left()"><</a></li>
+  <li><a href="javascript:;" onclick="right()">></a></li>
   
 
 </ul>
