--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,61 @@
+@font-face{
+  font-family: "icon";
+  src:url('../fonts/icomoon.eot') format('embedded-opentype')
+,url('../fonts/icomoon.woff') format("woff")
+,url('../fonts/icomoon.ttf') format("truetype")
+,url('../fonts/icomoon.svg') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+.arrow_icon
+{
+  font-family: "icon";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2.4em;
+}
+.board
+{
+  position: fixed;
+  z-index: 1;
+  top: 6.6rem;
+  right: 30%;
+
+
+}
+.board>i
+{
+  position: absolute;
+  color: white;
+  margin-left: -3em;
+}
+.board>ul>li>a:hover
+{
+  background-color: hsla(0,0%,100%,.3);
+
+}
+.board .board_right
+{
+  position: absolute;
+  margin-left: 6.2rem;
+}
+.board .board_up
+{
+  position: absolute;
+  margin-top: -3rem;
+  left: 3rem;
+}
+.board .board_down
+{
+  position: absolute;
+  top:3rem;
+  left: 3rem;
+}
+
+.console>li>a{
+
+  color: #05F3E1;
+}
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   min-width: 1200px;
