--- a/views/ex1.html
+++ b/views/ex1.html
@@ -93,5 +93,6 @@
     <script src=js/nav.js></script>
     <script src="js/main.js"></script>
     <script src="js/delbar.js"></script>
+    <script src='js/dragfile.js'></script>
   </body>
 </html>
