--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,20 +14,30 @@ font-style: normal;
   font-weight: normal;
   font-size: 2.4em;
 }
+.icon
+{
+    font-family: "icon";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2em;
+
+}
+
 .board
 {
   position: fixed;
   z-index: 1;
   top: 6.6rem;
-  right: 30%;
+  right: 18%;
 
 
 }
 .board>i
 {
   position: absolute;
-  color: white;
-  margin-left: -3em;
+  color: #000;
+  margin-left: -3rem;
+  margin-top: -3rem;
 }
 .board>ul>li>a:hover
 {
@@ -72,7 +82,7 @@ body {
   height: 160px;
   width: calc(100% - 60px);
   margin: 30px;
-  padding: 50px;
+  padding: 30px;
   position: relative;
   box-shadow: 0px 0px 10px #000;
   background-color: hsla(0,0%,100%,.3);
@@ -175,10 +185,10 @@ z-index: -1;
 }
 #delbar
 {
-  width: calc(20% - 3em);
+  width: calc(19% - 3rem);
   float: left;
   height: 600px;
-  margin-left:3em; 
+  margin-left:3rem; 
   background-color: hsla(0,0%,100%,.3);
   padding: 10px;
   position: relative;
@@ -202,6 +212,38 @@ z-index: -1;
 
 
 }
+
+.md-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 200;
+}
+.chart
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  height: 80%;
+  transform: translate(-50%,-50%);
+  background-color: hsla(0,0,100,.5)
+  color: white;
+}
+.chart:before
+{ background-color: white;
+  content:'';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+}
+
       .ol-popup {
         position: absolute;
         background-color: white;
