修改了一部分的显示bug

--- a/views/ex1.html
+++ b/views/ex1.html
@@ -16,16 +16,16 @@
   <ul class="nav nav-pills">
   <li role="presentation"><a href="#"><i class="icon">&#xe905;</i>&nbsp;&nbsp;Home</a></li>
   <li role="presentation"><a href="https://github.com/inertiabeer/web-gis"><i class="icon">&#xe901;</i>&nbsp;&nbsp;Code</a></li>
-  <li role="presentation"><a href="https://inertiabeer.github.io/"><i class="icon">&#xe902;</i>&nbsp;&nbsp;Contact me</a></li>
+  <li role="presentation"><a href="https://inertiabeer.github.io/"><i class="icon">&#xe902;</i>&nbsp;&nbsp;Contact</a></li>
   
    <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="icon">&#xe922;</i>&nbsp;&nbsp;User action<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="icon">&#xe922;</i>&nbsp;&nbsp;Action<span class="caret"></span></a>
           <ul class="dropdown-menu" style="max-height: 600px;overflow: scroll;">
           </ul>
   </li>
   <li role="presentation"><a href="javascript:;" onclick="showEchart()" class='echart'><i class="icon">&#xe900;</i>&nbsp;&nbsp;Echart</a></li>
   <li role="presentation"><a href="#" class="logout"><i class="icon">&#xe974;</i>&nbsp;&nbsp;Log out</a></li>
-  <li role="presentation" id="display_name"><a href="#"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>username</a></li>
+  <li role="presentation" id="display_name"><a href="#"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span></a></li>
 
   
 
